--- a/secrets.py.example
+++ b/secrets.py.example
@@ -10,7 +10,7 @@ secrets = {
     "ssid": "wifi_network_name",
     "password": "wifi_password",
     "timezone": "America/New_York",  # Check http://worldtimeapi.org/timezones
-    "feather_id": "feather_2022_001",
+    "cell_id": "feather_2022_001",
     "reading_interval": "300",
 }
 
