--- a/secrets.py.example
+++ b/secrets.py.example
@@ -14,3 +14,6 @@ secrets = {
     "reading_interval": "300",
 }
 
+## NOTE:  Before sending a device to a user, enable "quiet mode" by creating 
+## quiet.txt 
+## in this CIRCUITPY folder. See quiet.txt.example for more information. 
