multiple network connections

--- a/secrets.py.example
+++ b/secrets.py.example
@@ -4,16 +4,12 @@
 # This file is where you keep secret settings, passwords, and tokens!
 # If you put them in the code you risk committing that info or sharing it
 
-# Copy this to secrets.py on your actual device
-
 secrets = {
-    "ssid": "wifi_network_name",
-    "password": "wifi_password",
+    "tenant_wifi_ssid": "XXXX",
+    "tenant_wifi_password": "XXXX",
+    "heatseek_wifi_ssid": "000000",
+    "heatseek_wifi_password": "000000",
     "timezone": "America/New_York",  # Check http://worldtimeapi.org/timezones
-    "cell_id": "feather_2022_001",
-    "reading_interval": "300",
+    "cell_id": "feather_2022_003",
+    "reading_interval": "3600",
 }
-
-## NOTE:  Before sending a device to a user, enable "quiet mode" by creating 
-## quiet.txt 
-## in this CIRCUITPY folder. See quiet.txt.example for more information. 
