--- a/secrets.py.example
+++ b/secrets.py.example
@@ -7,11 +7,14 @@
 # Copy this to secrets.py on your actual device
 
 secrets = {
-    "ssid": "wifi_network_name",
-    "password": "wifi_password",
+    "tenant_wifi_ssid": "xxxx",
+    "tenant_wifi_password": "xxxx",
+    "heatseek_wifi_ssid": "zzzz",
+    "heatseek_wifi_password": "zzzz",
     "timezone": "America/New_York",  # Check http://worldtimeapi.org/timezones
-    "cell_id": "feather_2022_001",
-    "reading_interval": "300",
+    "cell_id": "feather_AAA",
+    "reading_interval": "3601",
+    "sms_mode": "false",
 }
 
 ## NOTE:  Before sending a device to a user, enable "quiet mode" by creating 
