default sms_mode to true on the fona-support branch

--- a/secrets.py.example
+++ b/secrets.py.example
@@ -14,7 +14,7 @@ secrets = {
     "timezone": "America/New_York",  # Check http://worldtimeapi.org/timezones
     "cell_id": "feather_AAA",
     "reading_interval": "3601",
-    "sms_mode": "false",
+    "sms_mode": "true",
 }
 
 ## NOTE:  Before sending a device to a user, enable "quiet mode" by creating 
